# source/src/model/blog.model.go
@@ -7,15 +7,16 @@ import (
 
 // Generated by https://quicktype.io
 
-type Catalog struct {
+type Blog struct {
 	MetadataWithID `bson:",inline"`
 
-	Name     string `json:"name" bson:"name"`
-	Category string `json:"category" bson:"category"`
-	Image    string `json:"image" bson:"image"`
+	Author     string `json:"author" bson:"author"`
+	Judul      string `json:"judul" bson:"judul"`
+	ImageCover string `json:"image_cover" bson:"image_cover"`
+	Content    string `json:"content" bson:"content"`
 }
 
-type Catalog_Search struct {
+type Blog_Search struct {
 	//? Regex
 	Search string                   `json:"search"`
 	Filter []map[string]interface{} `json:"filter"`
@@ -23,11 +24,11 @@ type Catalog_Search struct {
 	Request
 }
 
-type Catalog_View struct {
-	Catalog `bson:",inline"`
+type Blog_View struct {
+	Blog `bson:",inline"`
 }
 
-func (this *Catalog_Search) HandleFilter(listFilterAnd *[]bson.M) {
+func (this *Blog_Search) HandleFilter(listFilterAnd *[]bson.M) {
 	if search := this.Search; search != "" {
 		*listFilterAnd = append(*listFilterAnd, bson.M{"name": primitive.Regex{Pattern: search, Options: "i"}})
 	}
